<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="24dp"
            android:paddingHorizontal="24dp"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/field_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/field_title"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/field_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/field_description"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/field_title" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/channel_spinner"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:entries="@array/notification_channels_names"
                app:layout_constraintTop_toBottomOf="@+id/field_description" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:entries="@array/notification_priorities"
                app:layout_constraintTop_toBottomOf="@+id/channel_spinner" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/applyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_primary"
                android:text="@string/apply_btn"
                android:layout_marginBottom="4dp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>